Renamed and updated some stuff

--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,10 @@
 <body>
     <div id="middle">
         <div id="screenWrapper">
-            <div id="screen">00:04:77</div>
+            <div id="screen">00:00:00</div>
         </div>
         <div id="lapsContainer">
-            <div id="laps">
-                <div class="lap"><p class="lapNumber">1</p><p class="lapTime">00:01:33</p></div>
-                <div class="lap"><p class="lapNumber">1</p><p class="lapTime">00:02:44</p></div>
-                <div class="lap"><p class="lapNumber">1</p><p class="lapTime">00:03:55</p></div>
-            </div>
+            <div id="laps"></div>
         </div>
     </div>
     <div id="bottom">
